--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,6 @@
 %h1 Nurblizer
 
-%form{:action => '/nurble', :method => 'post'}
+%form{:action => '/nurble', :method => 'get'}
   %fieldset
     %ul
       %li
